--- a/www/index.html
+++ b/www/index.html
@@ -41,8 +41,8 @@
         <link rel="icon" type="image/png" href="favicon/favicon_32x32.png"   sizes="32x32">
         <link rel="icon" type="image/png" href="favicon/favicon_16x16.png"   sizes="16x16">
         
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="mask-icon" href="favicon.svg">
+        <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+        <link rel="mask-icon" href="favicon/favicon.svg">
         <link rel="apple-touch-icon" href="favicon/favicon_194x194.png">
         
         <link rel="manifest" href="manifest.json">
