--- a/www/player/index.html
+++ b/www/player/index.html
@@ -48,7 +48,7 @@
         <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="css/player.css">
 
-        <script type="text/javascript" src="js/player.js"></script>
+        <script type="text/javascript" src="js/player.js" defer></script>
         <script type="application/ld+json">
             {
                 "@context": "http://schema.org",
@@ -60,4 +60,6 @@
             }
         </script>
     </head>
+    <body>
+    </body>
 </html>
