--- a/www/player/index.html
+++ b/www/player/index.html
@@ -49,7 +49,7 @@
         <link rel="stylesheet" href="css/player.css">
 
         <script type="text/javascript" src="js/player.js" defer></script>
-        <script type="text/javascript" src="//ecal.polsat.com.pl/playerclient/modules/CLIENT.js" defer></script>
+        <!--<script type="text/javascript" src="//ecal.polsat.com.pl/playerclient/modules/CLIENT.js" defer></script>-->
         <script type="application/ld+json">
             {
                 "@context": "http://schema.org",
